# squirro_chatbot

./: README.MD  app.py  pyproject.toml
squirro_chatbot/: app.py  app_config.py  app_tests.py  search_result.py
squirro_chatbot/configs/: analyser_config.json  analyser_ngrams_config.json
squirro_chatbot/dataclasses/: search_result.py
squirro_chatbot/elastic_search_configs/: elastic_search_config.py
squirro_chatbot/fiqa_notebooks/: FIQA_Baseline.ipynb
squirro_chatbot/models/: openai_chat_model.py  openai_chat_model_test.py
